refactor(java-compatibility): 修复Java版本兼容性并清理类型检查代码